--- a/main/templates/product_detail.html
+++ b/main/templates/product_detail.html
@@ -7,7 +7,7 @@
 <p><b>Price:</b> Rp {{ product.price }}</p>
 
 {% if product.is_featured %}
-  <p><b>⭐ Featured Product</b></p>
+  <p><b>Featured Product</b></p>
 {% endif %}
 
 {% if product.thumbnail %}
