--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -16,8 +16,20 @@
   <button>+ Add Product</button>
 </a>
 
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+
+<h5>Sesi terakhir login: {{ last_login }}</h5>
+
 <hr>
 
+<a href="?filter=all">
+    <button type="button">All Product</button>
+</a>
+<a href="?filter=my">
+    <button type="button">My Product</button>
+</a> 
 {% if not products %}
   <p>No products available in Football Shop.</p>
 {% else %}
